deployments/dashboard/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
